--- a/templates/watch.html
+++ b/templates/watch.html
@@ -49,8 +49,9 @@
     <header class="header">
         <a href="/" class="logo">🎬 <span>PACCS</span></a>
         <nav class="nav-links">
-            <a href="/watch" class="active">Watch</a>
-            <a href="/upload">Upload Film</a>
+            <a href="/festival">Festival</a>
+            <a href="/watch" class="active">Streaming</a>
+            <a href="/music-browse">Music</a>
             <a href="/filmmakers">Filmmakers</a>
             <a href="/dashboard">Dashboard</a>
         </nav>
