--- a/templates/winners.html
+++ b/templates/winners.html
@@ -78,7 +78,7 @@
             <a href="/festival">Festival</a>
             <a href="/watch">Streaming</a>
             <a href="/music-browse">Music</a>
-            <a href="https://filmfreeway.com/PeekaboonInternationalFilmFestival" target="_blank" class="primary">Submit Film →</a>
+            <a href="https://filmfreeway.com/PIFP" target="_blank" class="primary">Submit Film →</a>
         </nav>
     </header>
     
@@ -125,7 +125,7 @@
                 '<div class="icon">🏆</div>' +
                 '<h3>Winners Announced August 2026</h3>' +
                 '<p>The first PIFF winners will be announced at our London premiere. Submit your film now to be part of the inaugural edition.</p>' +
-                '<a href="https://filmfreeway.com/PeekaboonInternationalFilmFestival" target="_blank" class="btn">Submit on FilmFreeway →</a>' +
+                '<a href="https://filmfreeway.com/PIFP" target="_blank" class="btn">Submit on FilmFreeway →</a>' +
                 '</div>' +
                 '<div class="cta-section">' +
                 '<h3>🎬 Can\'t Wait? Start Streaming Now</h3>' +
@@ -186,7 +186,7 @@
             html += '<div class="cta-section">' +
                 '<h3>🎬 Want to Join Them?</h3>' +
                 '<p>Submit your film to PIFF 2026 and compete for platform access, London screenings, and global distribution.</p>' +
-                '<a href="https://filmfreeway.com/PeekaboonInternationalFilmFestival" target="_blank" class="btn">Submit on FilmFreeway →</a>' +
+                '<a href="https://filmfreeway.com/PIFP" target="_blank" class="btn">Submit on FilmFreeway →</a>' +
                 '</div>';
             
             document.getElementById('winnersSection').innerHTML = html;
@@ -228,7 +228,7 @@
                     '<div class="icon">' + getCategoryIcon(categoryMap[category]) + '</div>' +
                     '<h3>No Winners Yet in ' + categoryMap[category] + '</h3>' +
                     '<p>Be the first! Submit your film to this category.</p>' +
-                    '<a href="https://filmfreeway.com/PeekaboonInternationalFilmFestival" target="_blank" class="btn">Submit Film →</a>' +
+                    '<a href="https://filmfreeway.com/PIFP" target="_blank" class="btn">Submit Film →</a>' +
                     '</div>';
             } else {
                 renderWinners(filtered);
